# haskell-reals-comparison

./: .gitignore  README.md  haskell-reals-comparison.cabal  package.yaml  results.html
benchmarks/: README-charts.txt  all.csv  all.js  all_cm.js  logistic-fine-2017.csv  logistic-fine.csv  logistic-mBound-fine.csv  logistic-orig-fine.csv  logistic-rough-2017.csv  logistic.csv  logistic2.csv  manydigits-fine.csv  manydigits-mBound-fine.csv  manydigits-orig-fine.csv  manydigits-orig2-fine.csv  manydigits-orig3-fine.csv  manydigits1-fine.csv  manydigits2-cdar-mBound.csv  manydigits2-fine.csv  manydigits3-fine.csv  manydigits4-cdar-mBound.csv  manydigits4-fine.csv  manydigits5-cdar-mBound.csv  manydigits5-fine.csv  manydigits7-cdar-mBound.csv  manydigits7-fine.csv  manydigits8-fine.csv  results.csv  runBench.sh
old/: IRealOps.hs
src/: Main.hs
src/Tasks/: AERN2Ops.hs  IRealOps.hs  MixedTypesNumOps.hs  PreludeOps.hs
