Name:           haskell-reals-comparison
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2/aern2-mp
author:         Michal Konecny, Björn von Sydow
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2015-2019 Michal Konecny
license:        BSD3
license-file:   LICENSE
stability:      experimental
category:       Math
Synopsis:       comparison of Haskell exact real number implementations
Description:    Comparison of Haskell exact real number implementations

executable haskell-reals-comparison
  build-depends:
    base >= 4
    , mixed-types-num >= 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    -- , exact-real
    , ireal
    , cdar
  hs-source-dirs:  src
  ghc-options:     -O2 -Wall -rtsopts
  extensions:
                    RebindableSyntax
  other-modules:
                 Tasks.MixedTypesNumOps,
                 Tasks.PreludeOps,
                 Tasks.IRealOps
  main-is: Main.hs
